Github Actions workflows && README and LICENSE updates